--- a/templates/admin.html
+++ b/templates/admin.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="stylesheet" href="/static/style.css">
+<link rel="stylesheet" href="static/style.css">
 <body>
 <!-- Authorization Section -->
 <div id="auth-section" class="auth-form">
@@ -67,13 +67,6 @@
     <button onclick="registerUser()" class="register">Зарегистрировать</button>
     <button id="close-modal">Закрыть</button>
 </div>
-<div id="user-list" style="display: none;">
-    <ul>
-        {% for user in users %}
-        <li><a href="/user/{{ user.id }}">{{ user.username }}</a></li>
-        {% endfor %}
-    </ul>
-</div>
 </body>
 </html>
-<script defer src="/static/script.js"></script>
+<script defer src="static/script.js"></script>
